<resources>
    <string name="app_name">BSIET</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="enrollment">enrollment</string>
    <string name="registration">Registration</string>
    <string name="first_name">first name</string>
    <string name="middle_name">middle name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="mobile_no">mobile no</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">next</string>
    <string name="prefix">+91</string>
    <string name="create_user">Create username</string>
    <string name="alternate_mobile_no">Alternate Mobile no</string>
    <string name="joining_year">Joining year</string>
    <string name="select_department">Select Department</string>
    <string name="designation">Designation</string>
    <string name="staff_id">Staff ID</string>
    <string name="teacher_registration">Teacher registration</string>
    <string name="create_pass">Create password</string>
    <string name="retype_pass">Retype password</string>
    <string name="register_student">register</string>
    <string name="create_password">Create password</string>
    <string name="create_username">Create username</string>
    <string name="parent_mobile_no">Parent Mobile no</string>
    <string name="admission_year">Admission year</string>
    <string name="roll_no">roll_no</string>
    <string name="studying_in">Studying in</string>
    <string name="enrollment_no">Enrollment no</string>
    <string name="student_registration">Student registration</string>
    <string name="retype_password">Retype password</string>
    <string name="register_faculty">register</string>
    <string name="select_branch">Select Branch</string>
</resources>
