<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration_faculty">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="hideKeyboard"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:fontFamily="serif-monospace"
                android:text="@string/teacher_registration"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/staff_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/staff_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/staff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/designation"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/designation">

                <AutoCompleteTextView
                    android:id="@+id/select_designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/department"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/select_department">

                <AutoCompleteTextView
                    android:id="@+id/select_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/joining"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/joining_year">

                <AutoCompleteTextView
                    android:id="@+id/joining_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alternate_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/alternate_mobile_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/alternate_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_user"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/create_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/create_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/re_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/retype_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/retype_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="283dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:text="@string/register_faculty" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>