<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="209dp"
        android:layout_height="105dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="91dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bsiet_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:hint="@string/username"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorEnabled="true"

        app:helperText="Enter Your Username here"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:startIconDrawable="@drawable/ic_person_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="283dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="54dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText="Enter Your Password here"

        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_label"
        app:startIconDrawable="@drawable/ic_vpn_key_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signIn"
        android:layout_width="283dp"
        android:layout_height="60dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="162dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_label" />

    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn">

        <TextView
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>