<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:overScrollMode="ifContentScrolls"
    android:verticalScrollbarPosition="defaultPosition"
    tools:context=".registration">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="hideKeyboard">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:fontFamily="serif-monospace"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/first_name"
                app:counterEnabled="true"

                app:counterMaxLength="20"
                app:errorEnabled="true"
                app:helperText="Enter your first name here"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/middle_name_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/middle_name"
                app:counterEnabled="true"
                app:counterMaxLength="20"

                app:errorEnabled="true"
                app:helperText="Enter your middle name here"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/middle_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/last_name"
                app:counterEnabled="true"
                app:counterMaxLength="20"

                app:errorEnabled="true"
                app:helperText="Enter your last name here"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/email"
                app:counterEnabled="true"
                app:counterMaxLength="30"

                app:errorEnabled="true"
                app:helperText="Enter your email here"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:hint="@string/mobile_no"

                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:helperText="Enter your mobile no here"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/role_selection"
                style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="17dp"
                android:checkedButton="@+id/student"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <RadioButton
                    android:id="@+id/student"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/faculty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/faculty" />
            </RadioGroup>

            <Button
                android:id="@+id/next"
                android:layout_width="283dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>